--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             display: block;
             height: 30px;
             line-height: 30px;
-            width: 200px;
+            width: 100%;
             background-color:#fff7c8 ;
             color: #333;
             text-decoration: none;
@@ -138,11 +138,11 @@
             <div class="mainBox1">
                 <div class="mian">
                     <p  style="color: crimson">2017/02/15 HTML5</p>
-                    <a href="Month2Day15/Day15(1).html"  style="color: crimson">HTML5 简介</a>
-                    <a href="Month2Day15/Day15(2).html"  style="color: crimson">HTML5 章节结构</a>
-                    <a href="Month2Day15/Day15(3).html"  style="color: crimson">HTML5 章节格式</a>
-                    <a href="Month2Day15/Day15(4).html"  style="color: crimson">HTML5 媒介标记</a>
-                    <a href="Month2Day15/Day15(5).html"  style="color: crimson">HTML5 表单域、交互标记、其他</a>
+                    <a href="Month2Day15/Day15(1).html"  style="color: crimson">1.HTML5 简介</a>
+                    <a href="Month2Day15/Day15(2).html"  style="color: crimson">2.HTML5 章节结构</a>
+                    <a href="Month2Day15/Day15(3).html"  style="color: crimson">3.HTML5 章节格式</a>
+                    <a href="Month2Day15/Day15(4).html"  style="color: crimson">4.HTML5 媒介标记</a>
+                    <a href="Month2Day15/Day15(5).html"  style="color: crimson">5.HTML5 表单域、交互标记、其他</a>
                 </div>
                 <div class="mian">
                     <p>2017/02/13 jQuery</p>
