--- a/index.html
+++ b/index.html
@@ -97,6 +97,10 @@
 			  <li><a href="Month2Day10/Month2Day10.html">2017/01/10</a></li>
             </ul>
             <!--左部-->
+            <div class="mian">
+                <p>2017/02/14 jQuery</p>
+                <a href="Month2Day14/jQuery网络请求.html">jQuery 网络请求</a>
+            </div>
             <div class="mainBox1">
                 <div class="mian">
                     <p>2017/02/10 jQuery</p>
