--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <div class="mainBox1">
                 <div class="mian">
                     <p>2017/02/14 jQuery</p>
-                    <a href="Month2Day14/jQuery网络请求.html" style="color: crimson">jQuery 网络请求</a>
+                    <a href="Month2Day14/jQuery网络请求.html">jQuery 网络请求</a>
                 </div>
                 <div class="mian">
                     <p>2017/02/10 jQuery</p>
