--- a/index.html
+++ b/index.html
@@ -91,13 +91,19 @@
 		<div class="top"></div>
 		<div class="box">
 			<ul>
-			  <li><a href="jQuery.html">2017/02/07</a></li>
-			  <li><a href="Month2Day8/jQueryDOM.html">2017/01/08</a></li>
-			  <li><a href="Month2Day9.html">2017/01/09</a></li>
-			  <li><a href="Month2Day10/Month2Day10.html">2017/01/10</a></li>
+                <li><a href="Month2Day9.html">2017/02/09</a></li>
+                <li><a href="Month2Day10/Month2Day10.html">2017/02/10</a></li>
+                <li><a href="Month2Day13.html">2017/02/13</a></li>
+                <li><a href="Month2Day14/jQuery网络请求.html">2017/02/14</a></li>
+                <li><a href="Month2Day15/Day15(1).html">2017/02/15</a></li>
+			  <li><a href="Month2Day16/Geolocation.html">2017/02/16</a></li>
             </ul>
             <!--左部-->
             <div class="mainBox1">
+                <div class="mian">
+                    <p  style="color: crimson">2017/02/16 HTML 5</p>
+                    <a href="Month2Day16/Geolocation.html"  style="color: crimson">Geolocation（地理定位）</a>
+                </div>
                 <div class="mian">
                     <p>2017/02/14 jQuery</p>
                     <a href="Month2Day14/jQuery网络请求.html">jQuery 网络请求</a>
@@ -141,12 +147,12 @@
             <!--右部-->
             <div class="mainBox1">
                 <div class="mian">
-                    <p  style="color: crimson">2017/02/15 HTML5</p>
-                    <a href="Month2Day15/Day15(1).html"  style="color: crimson">1.HTML5 简介</a>
-                    <a href="Month2Day15/Day15(2).html"  style="color: crimson">2.HTML5 章节结构</a>
-                    <a href="Month2Day15/Day15(3).html"  style="color: crimson">3.HTML5 章节格式</a>
-                    <a href="Month2Day15/Day15(4).html"  style="color: crimson">4.HTML5 媒介标记</a>
-                    <a href="Month2Day15/Day15(5).html"  style="color: crimson">5.HTML5 表单域、交互标记、其他</a>
+                    <p>2017/02/15 HTML5</p>
+                    <a href="Month2Day15/Day15(1).html">1.HTML5 简介</a>
+                    <a href="Month2Day15/Day15(2).html">2.HTML5 章节结构</a>
+                    <a href="Month2Day15/Day15(3).html">3.HTML5 章节格式</a>
+                    <a href="Month2Day15/Day15(4).html">4.HTML5 媒介标记</a>
+                    <a href="Month2Day15/Day15(5).html">5.HTML5 表单域、交互标记、其他</a>
                 </div>
                 <div class="mian">
                     <p>2017/02/13 jQuery</p>
