--- a/index.html
+++ b/index.html
@@ -147,6 +147,10 @@
             <!--右部-->
             <div class="mainBox1">
                 <div class="mian">
+                    <p>2017/02/17 HTML5</p>
+                    <a href="M2D17map2.html">持续定位</a>
+                </div>
+                <div class="mian">
                     <p>2017/02/15 HTML5</p>
                     <a href="Month2Day15/Day15(1).html">1.HTML5 简介</a>
                     <a href="Month2Day15/Day15(2).html">2.HTML5 章节结构</a>
