--- a/Month2Day16/map2.html
+++ b/Month2Day16/map2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8"/>
     <title>基于浏览器的HTML5查找地理位置</title>
-    <script src="http://api.map.baidu.com/api?v=1.2" type="text/javascript"></script>
+    <script src="http://api.map.baidu.com/api?v=2.0&ak=U3GWbzKekZ1f4QNCyeSeMdBaf3EmkGfW"></script>
     <style>
         .bt1{
             position: absolute;
