--- a/index.html
+++ b/index.html
@@ -1,215 +1,136 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
-		<title>每日总结</title>
-		<!--<script src="" type="text/javascript" charset="utf-8"></script>-->
-		<style>
-		*{margin: 0;padding: 0;list-style: none;background-color:#010101;cursor:url('mainmenu1.cur'),auto;font-family: "微软雅黑"; }
-		.top{
-			width: 100%;
-			height: 130px;
-			background: url(img/TOP0.jpg) no-repeat;
-			background-position: calc((100% - 550px) / 2)  -85px;
-			background-color: #010101;
-		}
-		.box{
-            width: 900px;
-            margin: 0 auto 80px;
-            border: 5px solid #010101;
-            border-top:0 ;
-            border-radius:0 0 50px 50px;
-            box-shadow: 0 0 80px #797c7f;
-            height: 1600px;
-            background:url(img/timg.jpg) no-repeat;
-            background-size:100% 100% ;
-		}
-        .box>ul>li>a{
-            background-color:#f7cdd1 ;
-            color: #333;
-            text-decoration: none;
-            cursor: pointer;
-        }
-        .box>ul>li>a:hover{
-            text-decoration: underline;
-        }
-        .mian{
-        	width: 280px;
-        	height: auto;
-            float: left;
-            border: 3px solid #333;
-            border-radius: 7px;
-            box-shadow: 0 0 3px #333;
-            background-color: #fff7c8;
-            margin:20px 0 0 80px;
-            padding: 10px 0 10px 20px;
-        }
-        .mian>a{
-            display: block;
-            height: 30px;
-            line-height: 30px;
-            width: 100%;
-            background-color:#fff7c8 ;
-            color: #333;
-            text-decoration: none;
-            cursor: pointer;
-            margin: 7px 0 0;
-        }
-        .mian>a:hover{
-            text-decoration: underline;
-        }
-        .mian>p{
-            color:#343434;
-            background-color:#fff7c8;
-        }
-        ul{
-        	width: 900px;
-        	height: 30px;
-        	background-color: #f7cdd1;
-        }
-        li{
-        	width: 150px;
-        	text-align: center;
-        	height: 30px;
-        	line-height: 30px;
-        	font-size: 15px;
-        	color: #010101;
-        	font-weight: 800;
-        	background-color: #f7cdd1;
-        	float: left;
-        	cursor: pointer;
-        }
-        .mainBox1{
-            float: left;
-            width: 425px;
-            height: auto;
-            background-color: inherit;
-        }
-		</style>
-	</head>
-	<body>
-		<div class="top"></div>
-		<div class="box">
-			<ul>
-                <li><a href="Month2Day9.html">2017/02/09</a></li>
-                <li><a href="Month2Day10/Month2Day10.html">2017/02/10</a></li>
-                <li><a href="Month2Day13.html">2017/02/13</a></li>
-                <li><a href="Month2Day14/jQuery网络请求.html">2017/02/14</a></li>
-                <li><a href="Month2Day15/Day15(1).html">2017/02/15</a></li>
-			  <li><a href="Month2Day16/Geolocation.html">2017/02/16</a></li>
-            </ul>
-            <!--左部-->
-            <div class="mainBox1">
-                <div class="mian">
-                    <p>2017/02/22 CSS3</p>
-                    <a href="Month2Day22/transform.html">1.transform</a>
-                    <a href="Month2Day22/transition.html">2.transition</a>
-                </div>
-                <div class="mian">
-                    <p>2017/02/20 HTML5</p>
-                    <a href="Month2Day20/cookie.html">1.cookie</a>
-                    <a href="Month2Day20/localStorage.html">2.localStorage</a>
-                    <a href="Month2Day20/Web Sql Database.html">3.Web Sql Database</a>
-                </div>
-                <div class="mian">
-                    <p>2017/02/16 HTML 5</p>
-                    <a href="Month2Day16/Geolocation.html"  style>Geolocation（地理定位）</a>
-                </div>
-                <div class="mian">
-                    <p>2017/02/14 jQuery</p>
-                    <a href="Month2Day14/jQuery网络请求.html">jQuery 网络请求</a>
-                </div>
-                <div class="mian">
-                    <p>2017/02/10 jQuery</p>
-                    <a href="Month2Day10/Month2Day10.html">1.jQuery Animation</a>
-                    <a href="Month2Day10/test1.html">2.周考卷</a>
-                </div>
-                <div class="mian">
-                    <p >2017/02/8 jQuery </p>
-                    <a href="Month2Day8/jQueryProperty.html">1.jQuery 属性</a>
-                    <a href="Month2Day8/DOM.html">2.DOM</a>
-                    <a href="Month2Day8/jQueryDOM.html">3.jQuery 文档处理</a>
-                </div>
-                <div class="mian">
-                <p >2017/02/7 </p>
-                <a href="jQuery.html">jQuery</a>
-                </div>
-                <div class="mian">
-                    <p >2017/01/17 音频和视频 </p>
-                    <a href="Month1Day17/audio.html">1.audio</a>
-                    <a href="Month1Day17/video.html">2.video</a>
-                </div>
-                <div class="mian">
-                    <p >2017/01/13 </p>
-                    <a href="Month1Day13/Month1Day13canves.html">Canves 画布</a>
-                </div>
-                <div class="mian">
-                    <p >2017/01/11 原型与原型链</p>
-                    <a href="proto.html">1.原型与原型链</a>
-                </div>
-                <div class="mian">
-                    <p >2017/01/09-周静雯-工具介绍总结</p>
-                    <a href="HBuilder.html">1.HBuilder</a>
-                    <a href="Mayun.html">2.码云</a>
-                    <a href="GitHub.html">3.GitHub</a>
-                </div>
-            </div>
+    <meta charset="utf-8"/>
+    <title>每日总结</title>
+    <link type="text/css" href="css/javencs.css" rel="stylesheet">
+    <link type="text/css" href="css/other.css" rel="stylesheet">
+</head>
+<body>
+<div id="main">
+    <img src="img/mine.png">
+    <ul id="list">
+        <li><a>首页</a></li>
+        <li><a href="intel/january.html">一月</a></li>
+        <li><a href="intel/february.html">二月</a></li>
+        <li><a href="intel/recommend.html">网站推荐</a></li>
+    </ul>
+    <a href="#" id="back_top">回到<br/>顶部</a>
 
-            <!--右部-->
-            <div class="mainBox1">
-                <div class="mian">
-                    <p  style="color: crimson">2017/02/23 CSS3</p>
-                    <a href="Month2Day23/rendering-engine.html"  style="color: crimson">相关术语+布局</a>
-                </div>
-                <div class="mian">
-                    <p>2017/02/21 CSS3</p>
-                    <a href="Month2Day21/selectors.html">1.选择器</a>
-                    <a href="Month2Day21/test2.html">2.周测2</a>
-                </div>
-                <div class="mian">
-                    <p>2017/02/17 HTML5</p>
-                    <a href="M2D17map2.html">持续定位</a>
-                </div>
-                <div class="mian">
-                    <p>2017/02/15 HTML5</p>
-                    <a href="Month2Day15/Day15(1).html">1.HTML5 简介</a>
-                    <a href="Month2Day15/Day15(2).html">2.HTML5 章节结构</a>
-                    <a href="Month2Day15/Day15(3).html">3.HTML5 章节格式</a>
-                    <a href="Month2Day15/Day15(4).html">4.HTML5 媒介标记</a>
-                    <a href="Month2Day15/Day15(5).html">5.HTML5 表单域、交互标记、其他</a>
-                </div>
-                <div class="mian">
-                    <p>2017/02/13 jQuery</p>
-                    <a href="Month2Day13.html">jQuery AJAX</a>
-                </div>
-                <div class="mian">
-                    <p >2017/02/9 jQuery</p>
-                    <a href="Month2Day9.html">jQuery Event</a>
-                </div>
-                <div class="mian">
-                    <p >2017/02/6 AJAX </p>
-                    <a href="Month2Day6/ajax.html">1.AJAX</a>
-                    <a href="Month2Day6/http.html">2.AJAX补充</a>
-                    <a href="Month2Day6/ajax面试题.html">3.AJAX经典面试题</a>
-                </div>
-                <div class="mian">
-                    <p >2017/01/16 </p>
-                    <a href="Month1Day16/Day16canves.html">Canves 续</a>
-                </div>
-                <div class="mian">
-                    <p >2017/01/12 </p>
-                    <a href="Month1Day12/event.html">1.JS Array,Event,排序回顾</a>
-                    <a href="Month1Day12/error.html">2.Error对象</a>
-                    <a href="Month1Day12/touch.html">3.触摸事件</a>
-                </div>
-                <div class="mian">
-                    <p >2017/01/10 js回顾总结</p>
-                    <a href="Month1Day10/base.html">1.JS基础</a>
-                    <a href="Month1Day10/function.html">2.函数的声明</a>
-                    <a href="Month1Day10/this.html">3.this指向</a>
-                    <a href="Month1Day10/work.html">4.作用域</a>
-                </div>
+    <div class="box"  style="height: 1700px">
+        <!--左部-->
+        <div class="mainBox1">
+            <div class="mian">
+                <p>2017/02/22 CSS3</p>
+                <a href="Month2Day22/transform.html">1.transform</a>
+                <a href="Month2Day22/transition.html">2.transition</a>
             </div>
-		</div>
-	</body>
+            <div class="mian">
+                <p>2017/02/20 HTML5</p>
+                <a href="Month2Day20/cookie.html">1.cookie</a>
+                <a href="Month2Day20/localStorage.html">2.localStorage</a>
+                <a href="Month2Day20/Web Sql Database.html">3.Web Sql Database</a>
+            </div>
+            <div class="mian">
+                <p>2017/02/16 HTML 5</p>
+                <a href="Month2Day16/Geolocation.html" style>Geolocation（地理定位）</a>
+            </div>
+            <div class="mian">
+                <p>2017/02/14 jQuery</p>
+                <a href="Month2Day14/jQuery网络请求.html">jQuery 网络请求</a>
+            </div>
+            <div class="mian">
+                <p>2017/02/10 jQuery</p>
+                <a href="Month2Day10/Month2Day10.html">1.jQuery Animation</a>
+                <a href="Month2Day10/test1.html">2.周考卷</a>
+            </div>
+            <div class="mian">
+                <p>2017/02/8 jQuery </p>
+                <a href="Month2Day8/jQueryProperty.html">1.jQuery 属性</a>
+                <a href="Month2Day8/DOM.html">2.DOM</a>
+                <a href="Month2Day8/jQueryDOM.html">3.jQuery 文档处理</a>
+            </div>
+            <div class="mian">
+                <p>2017/02/7 </p>
+                <a href="jQuery.html">jQuery</a>
+            </div>
+            <div class="mian">
+                <p>2017/01/17 音频和视频 </p>
+                <a href="Month1Day17/audio.html">1.audio</a>
+                <a href="Month1Day17/video.html">2.video</a>
+            </div>
+            <div class="mian">
+                <p>2017/01/13 </p>
+                <a href="Month1Day13/Month1Day13canves.html">Canves 画布</a>
+            </div>
+            <div class="mian">
+                <p>2017/01/11 原型与原型链</p>
+                <a href="proto.html">1.原型与原型链</a>
+            </div>
+            <div class="mian">
+                <p>2017/01/09-周静雯-工具介绍总结</p>
+                <a href="HBuilder.html">1.HBuilder</a>
+                <a href="Mayun.html">2.码云</a>
+                <a href="GitHub.html">3.GitHub</a>
+            </div>
+        </div>
+
+        <!--右部-->
+        <div class="mainBox1">
+            <div class="mian">
+                <p style="color: crimson">2017/02/23 CSS3</p>
+                <a href="Month2Day23/rendering-engine.html" style="color: crimson">相关术语+布局</a>
+            </div>
+            <div class="mian">
+                <p>2017/02/21 CSS3</p>
+                <a href="Month2Day21/selectors.html">1.选择器</a>
+                <a href="Month2Day21/test2.html">2.周测2</a>
+            </div>
+            <div class="mian">
+                <p>2017/02/17 HTML5</p>
+                <a href="M2D17map2.html">持续定位</a>
+            </div>
+            <div class="mian">
+                <p>2017/02/15 HTML5</p>
+                <a href="Month2Day15/Day15(1).html">1.HTML5 简介</a>
+                <a href="Month2Day15/Day15(2).html">2.HTML5 章节结构</a>
+                <a href="Month2Day15/Day15(3).html">3.HTML5 章节格式</a>
+                <a href="Month2Day15/Day15(4).html">4.HTML5 媒介标记</a>
+                <a href="Month2Day15/Day15(5).html">5.HTML5 表单域、交互标记、其他</a>
+            </div>
+            <div class="mian">
+                <p>2017/02/13 jQuery</p>
+                <a href="Month2Day13.html">jQuery AJAX</a>
+            </div>
+            <div class="mian">
+                <p>2017/02/9 jQuery</p>
+                <a href="Month2Day9.html">jQuery Event</a>
+            </div>
+            <div class="mian">
+                <p>2017/02/6 AJAX </p>
+                <a href="Month2Day6/ajax.html">1.AJAX</a>
+                <a href="Month2Day6/http.html">2.AJAX补充</a>
+                <a href="Month2Day6/ajax面试题.html">3.AJAX经典面试题</a>
+            </div>
+            <div class="mian">
+                <p>2017/01/16 </p>
+                <a href="Month1Day16/Day16canves.html">Canves 续</a>
+            </div>
+            <div class="mian">
+                <p>2017/01/12 </p>
+                <a href="Month1Day12/event.html">1.JS Array,Event,排序回顾</a>
+                <a href="Month1Day12/error.html">2.Error对象</a>
+                <a href="Month1Day12/touch.html">3.触摸事件</a>
+            </div>
+            <div class="mian">
+                <p>2017/01/10 js回顾总结</p>
+                <a href="Month1Day10/base.html">1.JS基础</a>
+                <a href="Month1Day10/function.html">2.函数的声明</a>
+                <a href="Month1Day10/this.html">3.this指向</a>
+                <a href="Month1Day10/work.html">4.作用域</a>
+            </div>
+        </div>
+    </div>
+</div>
+</body>
 </html>
