--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
         <!--左部-->
         <div class="mainBox1">
             <div class="mian">
+                <p style="color: crimson">2017/03/06 bootstrap</p>
+                <a href="Month3Day6/bootstrap.html" style="color: crimson">bootstrap  CSS</a>
+            </div>
+            <div class="mian">
                 <p>2017/02/22 CSS3</p>
                 <a href="Month2Day22/transform.html">1.transform</a>
                 <a href="Month2Day22/transition.html">2.transition</a>
@@ -54,32 +58,17 @@
                 <p>2017/02/7 </p>
                 <a href="jQuery.html">jQuery</a>
             </div>
-            <div class="mian">
-                <p>2017/01/17 音频和视频 </p>
-                <a href="Month1Day17/audio.html">1.audio</a>
-                <a href="Month1Day17/video.html">2.video</a>
-            </div>
-            <div class="mian">
-                <p>2017/01/13 </p>
-                <a href="Month1Day13/Month1Day13canves.html">Canves 画布</a>
-            </div>
-            <div class="mian">
-                <p>2017/01/11 原型与原型链</p>
-                <a href="proto.html">1.原型与原型链</a>
-            </div>
-            <div class="mian">
-                <p>2017/01/09-周静雯-工具介绍总结</p>
-                <a href="HBuilder.html">1.HBuilder</a>
-                <a href="Mayun.html">2.码云</a>
-                <a href="GitHub.html">3.GitHub</a>
-            </div>
         </div>
 
         <!--右部-->
         <div class="mainBox1">
             <div class="mian">
-                <p style="color: crimson">2017/02/23 CSS3</p>
-                <a href="Month2Day23/rendering-engine.html" style="color: crimson">相关术语+布局</a>
+                <p style="color: crimson">2017/03/07 bootstrap</p>
+                <a href="Month3Day7/bootstrap.html" style="color: crimson">bootstrap  组件</a>
+            </div>
+            <div class="mian">
+                <p>2017/02/23 CSS3</p>
+                <a href="Month2Day23/rendering-engine.html">相关术语+布局</a>
             </div>
             <div class="mian">
                 <p>2017/02/21 CSS3</p>
@@ -111,23 +100,6 @@
                 <a href="Month2Day6/ajax.html">1.AJAX</a>
                 <a href="Month2Day6/http.html">2.AJAX补充</a>
                 <a href="Month2Day6/ajax面试题.html">3.AJAX经典面试题</a>
-            </div>
-            <div class="mian">
-                <p>2017/01/16 </p>
-                <a href="Month1Day16/Day16canves.html">Canves 续</a>
-            </div>
-            <div class="mian">
-                <p>2017/01/12 </p>
-                <a href="Month1Day12/event.html">1.JS Array,Event,排序回顾</a>
-                <a href="Month1Day12/error.html">2.Error对象</a>
-                <a href="Month1Day12/touch.html">3.触摸事件</a>
-            </div>
-            <div class="mian">
-                <p>2017/01/10 js回顾总结</p>
-                <a href="Month1Day10/base.html">1.JS基础</a>
-                <a href="Month1Day10/function.html">2.函数的声明</a>
-                <a href="Month1Day10/this.html">3.this指向</a>
-                <a href="Month1Day10/work.html">4.作用域</a>
             </div>
         </div>
     </div>
