--- a/intel/february.html
+++ b/intel/february.html
@@ -12,7 +12,7 @@
     <ul id="list">
         <li><a href="../index.html">首页</a></li>
         <li><a href="january.html">一月</a></li>
-        <li><a>二月</a></li>
+        <li style="background-color: #48B;border: none"><a style="background-color: #48B;color: #fff">二月</a></li>
         <li><a href="recommend.html">网站推荐</a></li>
     </ul>
     <a href="#" id="back_top">回到<br/>顶部</a>
@@ -20,6 +20,10 @@
     <div class="box"  style="height: 1100px">
         <!--左部-->
         <div class="mainBox1">
+            <div class="mian">
+                <p style="color: crimson">2017/02/24 CSS3</p>
+                <a href="../Month2Day23/rendering-engine.html" style="color: crimson">flex伸缩盒</a>
+            </div>
             <div class="mian">
                 <p>2017/02/22 CSS3</p>
                 <a href="../Month2Day22/transform.html">1.transform</a>
@@ -59,8 +63,8 @@
         <!--右部-->
         <div class="mainBox1">
             <div class="mian">
-                <p style="color: crimson">2017/02/23 CSS3</p>
-                <a href="../Month2Day23/rendering-engine.html" style="color: crimson">相关术语+布局</a>
+                <p>2017/02/23 CSS3</p>
+                <a href="../Month2Day23/rendering-engine.html">相关术语+布局</a>
             </div>
             <div class="mian">
                 <p>2017/02/21 CSS3</p>
