--- a/index.html
+++ b/index.html
@@ -17,12 +17,16 @@
     </ul>
     <a href="#" id="back_top">回到<br/>顶部</a>
 
-    <div class="box"  style="height: 1700px">
+    <div class="box"  style="height: 900px">
         <!--左部-->
         <div class="mainBox1">
             <div class="mian">
-                <p style="color: crimson">2017/03/06 bootstrap</p>
-                <a href="Month3Day6/bootstrap.html" style="color: crimson">bootstrap  CSS</a>
+                <p style="color: crimson">2017/03/08 ECMAScript6</p>
+                <a href="Month3Day8/ECMAScript6.html" style="color: crimson">ECMAScript6</a>
+            </div>
+            <div class="mian">
+                <p>2017/03/06 bootstrap</p>
+                <a href="Month3Day6/bootstrap.html">bootstrap  CSS</a>
             </div>
             <div class="mian">
                 <p>2017/02/22 CSS3</p>
@@ -48,23 +52,13 @@
                 <a href="Month2Day10/Month2Day10.html">1.jQuery Animation</a>
                 <a href="Month2Day10/test1.html">2.周考卷</a>
             </div>
-            <div class="mian">
-                <p>2017/02/8 jQuery </p>
-                <a href="Month2Day8/jQueryProperty.html">1.jQuery 属性</a>
-                <a href="Month2Day8/DOM.html">2.DOM</a>
-                <a href="Month2Day8/jQueryDOM.html">3.jQuery 文档处理</a>
-            </div>
-            <div class="mian">
-                <p>2017/02/7 </p>
-                <a href="jQuery.html">jQuery</a>
-            </div>
         </div>
 
         <!--右部-->
         <div class="mainBox1">
             <div class="mian">
-                <p style="color: crimson">2017/03/07 bootstrap</p>
-                <a href="Month3Day7/bootstrap.html" style="color: crimson">bootstrap  组件</a>
+                <p>2017/03/07 bootstrap</p>
+                <a href="Month3Day7/bootstrap.html">bootstrap  组件</a>
             </div>
             <div class="mian">
                 <p>2017/02/23 CSS3</p>
@@ -90,16 +84,6 @@
             <div class="mian">
                 <p>2017/02/13 jQuery</p>
                 <a href="Month2Day13.html">jQuery AJAX</a>
-            </div>
-            <div class="mian">
-                <p>2017/02/9 jQuery</p>
-                <a href="Month2Day9.html">jQuery Event</a>
-            </div>
-            <div class="mian">
-                <p>2017/02/6 AJAX </p>
-                <a href="Month2Day6/ajax.html">1.AJAX</a>
-                <a href="Month2Day6/http.html">2.AJAX补充</a>
-                <a href="Month2Day6/ajax面试题.html">3.AJAX经典面试题</a>
             </div>
         </div>
     </div>
