--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <!--左部-->
         <div class="mainBox1">
             <div class="mian">
-                <p style="color: crimson">2017/03/08 ECMAScript6</p>
-                <a href="Month3Day8/ECMAScript6.html" style="color: crimson">ECMAScript6</a>
+                <p>2017/03/08 ECMAScript6</p>
+                <a href="Month3Day8/ECMAScript6.html">ECMAScript6</a>
             </div>
             <div class="mian">
                 <p>2017/03/06 bootstrap</p>
@@ -57,6 +57,10 @@
         <!--右部-->
         <div class="mainBox1">
             <div class="mian">
+                <p style="color: crimson">2017/03/09 Vue.js</p>
+                <a href="Month3Day9/Vue.html" style="color: crimson">Vue</a>
+            </div>
+            <div class="mian">
                 <p>2017/03/07 bootstrap</p>
                 <a href="Month3Day7/bootstrap.html">bootstrap  组件</a>
             </div>
@@ -80,10 +84,6 @@
                 <a href="Month2Day15/Day15(3).html">3.HTML5 章节格式</a>
                 <a href="Month2Day15/Day15(4).html">4.HTML5 媒介标记</a>
                 <a href="Month2Day15/Day15(5).html">5.HTML5 表单域、交互标记、其他</a>
-            </div>
-            <div class="mian">
-                <p>2017/02/13 jQuery</p>
-                <a href="Month2Day13.html">jQuery AJAX</a>
             </div>
         </div>
     </div>
