--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
         <!--左部-->
         <div class="mainBox1">
             <div class="mian">
+                <p style="color: crimson">2017/03/10 VueJS</p>
+                <a href="Month3Day10/Vue.html" style="color: crimson">VueJS 数据处理</a>
+            </div>
+            <div class="mian">
                 <p>2017/03/08 ECMAScript6</p>
                 <a href="Month3Day8/ECMAScript6.html">ECMAScript6</a>
             </div>
@@ -47,18 +51,13 @@
                 <p>2017/02/14 jQuery</p>
                 <a href="Month2Day14/jQuery网络请求.html">jQuery 网络请求</a>
             </div>
-            <div class="mian">
-                <p>2017/02/10 jQuery</p>
-                <a href="Month2Day10/Month2Day10.html">1.jQuery Animation</a>
-                <a href="Month2Day10/test1.html">2.周考卷</a>
-            </div>
         </div>
 
         <!--右部-->
         <div class="mainBox1">
             <div class="mian">
-                <p style="color: crimson">2017/03/09 Vue.js</p>
-                <a href="Month3Day9/Vue.html" style="color: crimson">Vue</a>
+                <p>2017/03/09 Vue.js</p>
+                <a href="Month3Day9/Vue.html">Vue</a>
             </div>
             <div class="mian">
                 <p>2017/03/07 bootstrap</p>
