--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <!--左部-->
         <div class="mainBox1">
             <div class="mian">
-                <p style="color: crimson">2017/03/10 VueJS</p>
-                <a href="Month3Day10/Vue.html" style="color: crimson">VueJS 数据处理</a>
+                <p>2017/03/10 VueJS</p>
+                <a href="Month3Day10/Vue.html">VueJS 数据处理</a>
             </div>
             <div class="mian">
                 <p>2017/03/08 ECMAScript6</p>
@@ -56,6 +56,10 @@
         <!--右部-->
         <div class="mainBox1">
             <div class="mian">
+                <p style="color: crimson">2017/03/13 VueJS</p>
+                <a href="Month3Day13/Vue.html" style="color: crimson">VueJS 组件</a>
+            </div>
+            <div class="mian">
                 <p>2017/03/09 Vue.js</p>
                 <a href="Month3Day9/Vue.html">Vue</a>
             </div>
@@ -75,14 +79,6 @@
             <div class="mian">
                 <p>2017/02/17 HTML5</p>
                 <a href="M2D17map2.html">持续定位</a>
-            </div>
-            <div class="mian">
-                <p>2017/02/15 HTML5</p>
-                <a href="Month2Day15/Day15(1).html">1.HTML5 简介</a>
-                <a href="Month2Day15/Day15(2).html">2.HTML5 章节结构</a>
-                <a href="Month2Day15/Day15(3).html">3.HTML5 章节格式</a>
-                <a href="Month2Day15/Day15(4).html">4.HTML5 媒介标记</a>
-                <a href="Month2Day15/Day15(5).html">5.HTML5 表单域、交互标记、其他</a>
             </div>
         </div>
     </div>
