--- a/intel/recommend.html
+++ b/intel/recommend.html
@@ -5,7 +5,7 @@
     <title>HTML5</title>
     <link type="text/css" href="../css/javencs.css" rel="stylesheet">
     <style>
-        a{text-decoration: underline}
+        a{text-decoration: underline;}
     </style>
 </head>
 <body>
@@ -19,11 +19,16 @@
         <li><a>网站推荐</a></li>
     </ul>
 
-    <div class="box" style="height: 400px">
+    <div class="box" style="height: 600px">
         <a href="http://www.zhangxinxu.com/wordpress/category/js/page/2/" style="background: none;color: #333;" target="_blank">« 张鑫旭-鑫空间-鑫生活</a>
         <a href="http://bbs.csdn.net/home" style="background: none;color: #333;" target="_blank">CSDN论坛首页 - CSDN.NET-CSDN论坛-CSDN.NET-中国最大的IT技术社区</a>
         <a href="https://www.zhihu.com/question/24398907" style="background: none;color: #333;" target="_blank">HTML5 有哪些让你惊艳的 demo？[知乎]</a>
         <a href="http://html5.huceo.com/" style="background: none;color: #333;" target="_blank">html5特效</a>
+        <a href="http://nodejs.cn/api/" style="background: none;color: #333;" target="_blank">nodejs API</a>
+        <a href="http://amazeui.org/getting-started" style="background: none;color: #333;" target="_blank">amaze UI</a>
+        <a href="http://www.layoutit.com/build" style="background: none;color: #333;" target="_blank">神器</a>
+        <a href="http://v3.bootcss.com/" style="background: none;color: #333;" target="_blank">Bootstrap</a>
+        <a href="http://cn.vuejs.org/" style="background: none;color: #333;" target="_blank">vuejs</a>
     </div>
 </div>
 </body>
