--- a/index.html
+++ b/index.html
@@ -49,7 +49,11 @@
             </div>
             <div class="mian">
                 <p>2017/02/16 HTML 5</p>
-                <a href="Month2Day16/Geolocation.html" style>Geolocation（地理定位）</a>
+                <a href="Month2Day16/Geolocation.html">Geolocation（地理定位）</a>
+            </div>
+             <div class="mian">
+                <p>2017/12/28 gift</p>
+                <a href=".html">小白生日快乐</a>
             </div>
         </div>
 
