--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </div>
              <div class="mian">
                 <p>2017/12/28 gift</p>
-                <a href=".html">小白生日快乐</a>
+                <a href="gift.html">小白生日快乐</a>
             </div>
         </div>
 
