--- a/gift.html
+++ b/gift.html
@@ -95,13 +95,13 @@
 <body>
 <div id="box">
     <div id="left"></div>
-    <img src="imgs/a.jpg" class="a">
-    <img src="imgs/b.jpg" class="b">
-    <img src="imgs/c.jpg" class="c">
-    <img src="imgs/d.jpg" class="d">
-    <img src="imgs/e.jpg" class="e">
-    <img src="imgs/f.jpg" class="f">
-    <img src="imgs/g.jpg" class="g">
+    <img src="img/a.jpg" class="a">
+    <img src="img/b.jpg" class="b">
+    <img src="img/c.jpg" class="c">
+    <img src="img/d.jpg" class="d">
+    <img src="img/e.jpg" class="e">
+    <img src="img/f.jpg" class="f">
+    <img src="img/g.jpg" class="g">
     <div id="right"></div>
 </div>
 <script>
